# robbot

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  config.json  config.toml
docs/: README.md
robbot/: Cargo.toml
robbot-bin/: Cargo.toml
robbot-bin/src/: bot.rs  builtin.rs  config.rs  help.rs  logger.rs  macros.rs  main.rs  permissions.rs  signal.rs
robbot-bin/src/core/: command.rs  executor.rs  hook.rs  module.rs  router.rs  state.rs  task.rs
robbot-bin/src/core/store/: mod.rs  mysql.rs
robbot-bin/src/plugins/: mod.rs
robbot-bin/src/plugins/autorole/: mod.rs
robbot-bin/src/plugins/customcommands/: commands.rs  mod.rs
robbot-bin/src/plugins/debug/: commands.rs  mod.rs
robbot-bin/src/plugins/events/: commands.rs  mod.rs  sql.rs  tasks.rs
robbot-bin/src/plugins/guildsync/: commands.rs  gw2api.rs  mod.rs  predicates.rs  sql.rs  task.rs  utils.rs
robbot-bin/src/plugins/guildsync/commands/: config.rs  ranks.rs
robbot-bin/src/plugins/log/: commands.rs  mod.rs  tasks.rs
robbot-bin/src/plugins/permissions/: commands.rs  mod.rs  permissions.rs
robbot-bin/src/plugins/temprole/: hooks.rs  mod.rs  sql.rs  tasks.rs
robbot-core/: Cargo.toml
robbot-core/src/: command.rs  config.rs  context.rs  executor.rs  hook.rs  lib.rs  module.rs  permissions.rs  router.rs  state.rs  task.rs
robbot-core/src/handlers/: message.rs  mod.rs
robbot-core/src/store/: mem.rs  mod.rs  mysql.rs
robbot-derive/: Cargo.toml
robbot-derive/src/: decode.rs  encode.rs  hook.rs  ident.rs  kvmap.rs  lib.rs  module.rs  store.rs  storedata.rs  task.rs
robbot-remote/: Cargo.toml
robbot-remote/src/: events.rs  lib.rs  proto.rs
robbot-remote/src/tcp/: client.rs  event.rs  mod.rs  raw.rs  server.rs
robbot/src/: arguments.rs  bot.rs  builder.rs  command.rs  context.rs  executor.rs  hook.rs  lib.rs  model.rs  module.rs  task.rs
robbot/src/model/: channel.rs  channel_impl.rs  guild.rs  guild_impl.rs  id.rs  mod.rs  permissions.rs  permissions_impl.rs  user.rs  user_impl.rs
robbot/src/remote/: mod.rs
robbot/src/store/: id.rs  impls.rs  lazy.rs  mod.rs
robbot/src/util/: color.rs  mod.rs  option.rs
src/: bot.rs  builder.rs  builtin.rs  help.rs  macros.rs  main.rs  model.rs
src/core/: command.rs  executor.rs  hook.rs  mod.rs  module.rs  router.rs  state.rs  task.rs
src/core/store/: mod.rs
src/plugins/: mod.rs
src/plugins/debug/: mod.rs
