[package]
name = "robbot-bin"
version = "0.6.0"
description = "The robbot binary"
edition = "2021"

repository = "https://gitlab.com/robbot/robbot"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "GPL-3.0"

[features]
default = ["debug", "permissions"]
debug = []
permissions = []

[profile.dev]
debug = 2
debug-assertions = true
panic = "unwind"
lto = "off"
opt-level = 0

[profile.release]
debug = 0
debug-assertions = false
panic = "unwind"
lto = "fat"
opt-level = 3

[dependencies]
tokio = { version = "~1.14.0", features = ["full"] }
serde = { version = "~1.0.130", features = ["derive"] }
serenity = { version = "~0.10.9", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
async-trait = "~0.1.51"
serde_json = "~1.0.72"
chrono = "~0.4.19"
sqlx = { version = "~0.5.9", features = ["runtime-tokio-rustls", "mysql", "any"] }
clap = "~2.33.3"
regex = "~1.5.4"
futures = "~0.3.18"
reqwest = "~0.11.6"
itoa = "~0.4.8"
dtoa = "~0.4.8"
robbot-derive = { version = "0.6.0", path = "../robbot-derive" }
robbot = { version = "0.6.0", path = "../robbot" }
toml = "~0.5.8"
log = { version = "~0.4.14", features = ["std", "serde"] }
robbot-core = { version = "0.6.0", path = "../robbot-core" }
