[package]
name = "robbot-bin"
version = "0.6.0"
description = "The robbot binary"
edition = "2021"

repository = "https://gitlab.com/robbot/robbot"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "GPL-3.0"

[features]
default = ["debug", "permissions"]
debug = []
permissions = []

[profile.dev]
debug = 2
debug-assertions = true
panic = "unwind"
lto = "off"
opt-level = 0

[profile.release]
debug = 0
debug-assertions = false
panic = "unwind"
lto = "fat"
opt-level = 3

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serenity = { version = "0.10.10", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
async-trait = "0.1.52"
serde_json = "1.0.79"
chrono = "0.4.19"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "mysql", "any"] }
clap = "3.1.6"
regex = "1.5.5"
futures = "0.3.21"
reqwest = "0.11.10"
itoa = "1.0.1"
dtoa = "1.0.2"
robbot-derive = { version = "0.6.0", path = "../robbot-derive" }
robbot = { version = "0.6.0", path = "../robbot" }
toml = "0.5.8"
log = { version = "0.4.14", features = ["std", "serde"] }
robbot-core = { version = "0.6.0", path = "../robbot-core" }

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.23.1"
