[package]
name = "robbot-core"
version = "0.6.0"
description = "robbot_core"
edition = "2021"

repository = "https://gitlab.com/robbot/robbot"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "GPL-3.0"

[features]
default = ["permissions"]
permissions = []

[dependencies]
robbot = { version = "0.6.0", path = "../robbot" }
tokio = { version = "~1.14.0", features = ["full"] }
serde = { version = "~1.0.126", features = ["derive"] }
serenity = { version = "~0.10.8", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
async-trait = "~0.1.51"
chrono = "~0.4.19"
log = { version = "~0.4.14", features = ["std", "serde"] }
futures = "~0.3.18"
sqlx = { version = "~0.5.9", features = ["runtime-tokio-rustls", "mysql", "any"] }
thiserror = "1.0.30"
