[package]
name = "robbot-derive"
version = "0.6.0"
description = "Proc macros for the robbot crate."
edition = "2021"

repository = "https://gitlab.com/robbot/robbot"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1.0.32"
quote = "~1.0.10"
syn = "~1.0.82"
