[package]
name = "robbot-remote"
version = "0.6.0"
description = "robbot"
edition = "2021"

repository = "https://gitlab.com/robbot/robbot"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
tokio = "1.14.0"
bincode = "1.3.3"
robbot = { version = "0.6.0", path = "../robbot" }
robbot-core = { version = "0.6.0", path = "../robbot-core" }
log = { version = "~0.4.14", features = ["std", "serde"] }
thiserror = "1.0.30"
async-trait = "0.1.52"
serenity = { version = "~0.10.8", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
libc = "0.2.117"
libloading = "0.7.3"
async-ffi = "0.3.1"
parking_lot = "0.12.0"
